--- a/index.html
+++ b/index.html
@@ -560,6 +560,7 @@
 
 <!-- **************** MAIN CONTENT START **************** -->
 <main style="margin-top: 100px;">
+<div id="google_translate_element"></div>
 	
 <!-- =======================
 Main Banner START -->
@@ -2281,6 +2282,12 @@ Footer END -->
 
 <!-- Template Functions -->
 <script src="js/functions.js"></script>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+ new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
 
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
