--- a/index.html
+++ b/index.html
@@ -2284,7 +2284,7 @@ Footer END -->
 <script src="js/functions.js"></script>
 <script type="text/javascript">
 function googleTranslateElementInit() {
- new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+ new google.translate.TranslateElement({pageLanguage: 'sl=vi&tl=en&op=translate'}, 'google_translate_element');
 }
 </script>
 
